laborations/lab1/testsuite/good/for-const.cc
int main() {
  for (const int i = 0; i != 100; ++i)
    i = i;
}
