laborations/lab1/testsuite/bad/bad052.cc
void foo(const int const) {

}
